--- a/02350AdvancedDemo/02350AdvancedDemo.Model/02350AdvancedDemo.Model.csproj
+++ b/02350AdvancedDemo/02350AdvancedDemo.Model/02350AdvancedDemo.Model.csproj
@@ -53,6 +53,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Diagram.cs" />
     <Compile Include="Line.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shape.cs" />
