Added functionality (node properties, multiple nodes, multiple edges, edge labels, data model polymorphism).

--- a/02350AdvancedDemo/02350AdvancedDemo.Model/02350AdvancedDemo.Model.csproj
+++ b/02350AdvancedDemo/02350AdvancedDemo.Model/02350AdvancedDemo.Model.csproj
@@ -53,10 +53,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DashLine.cs" />
+    <Compile Include="Circle.cs" />
     <Compile Include="Diagram.cs" />
     <Compile Include="Line.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shape.cs" />
+    <Compile Include="Square.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="FodyWeavers.xml" />
