--- a/02350SuperSimpleMVVMDemo/02350SuperSimpleMVVMDemo/App.config
+++ b/02350SuperSimpleMVVMDemo/02350SuperSimpleMVVMDemo/App.config
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- The configuration file is used for all kinds of configuration data, but should in most cases not be used for you project. -->
+<!-- The configuration file is used for all kinds of configuration data, but should in most cases not be used for your project. -->
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
