Changed Shape model class to use double instead of integers for size and position. And added the ability to select and move multiple shapes. And replaced collapsible sidebar functionality with extender control.

--- a/02350AdvancedDemo/02350AdvancedDemo/02350AdvancedDemo.csproj
+++ b/02350AdvancedDemo/02350AdvancedDemo/02350AdvancedDemo.csproj
@@ -83,7 +83,7 @@
     <Compile Include="UndoRedo\AddLineCommand.cs" />
     <Compile Include="UndoRedo\AddShapeCommand.cs" />
     <Compile Include="UndoRedo\IUndoRedoCommand.cs" />
-    <Compile Include="UndoRedo\MoveShapeCommand.cs" />
+    <Compile Include="UndoRedo\MoveShapesCommand.cs" />
     <Compile Include="UndoRedo\RemoveLinesCommand.cs" />
     <Compile Include="UndoRedo\RemoveShapesCommand.cs" />
     <Compile Include="UndoRedo\UndoRedoController.cs" />
