--- a/02350SuperSimpleMVVMDemo/02350SuperSimpleMVVMDemo/02350SuperSimpleMVVMDemo.csproj
+++ b/02350SuperSimpleMVVMDemo/02350SuperSimpleMVVMDemo/02350SuperSimpleMVVMDemo.csproj
@@ -41,6 +41,9 @@
   <PropertyGroup>
     <StartupObject>_02350SuperSimpleMVVMDemo.View.App</StartupObject>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -83,7 +86,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Icon.png" />
+    <Resource Include="Icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
