Trying to clean up the solution architecturaly, and adding context menu.

--- a/02350AdvancedDemo/02350AdvancedDemo/02350AdvancedDemo.csproj
+++ b/02350AdvancedDemo/02350AdvancedDemo/02350AdvancedDemo.csproj
@@ -103,8 +103,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\CircleViewModel.cs" />
-    <Compile Include="ViewModel\DialogViewModel.cs" />
+    <Compile Include="View\DialogViews.cs" />
     <Compile Include="ViewModel\LineViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ShapeViewModel.cs" />
