--- a/02350AdvancedDemo/02350AdvancedDemo/packages.config
+++ b/02350AdvancedDemo/02350AdvancedDemo/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net452" />
+  <package id="Unity" version="3.5.1404.0" targetFramework="net46" />
 </packages>
